Created Category models, serializers, and views. Designed the front end for admin to add category.

--- a/frontend/src/components/common/Common.module.css
+++ b/frontend/src/components/common/Common.module.css
@@ -14,3 +14,11 @@ section {
 .iconRectSelected {
   fill: #ffffff; /* Color when selected */
 }
+
+.black {
+  fill: #000;
+}
+
+.gray {
+  fill: rgb(106, 104, 104);
+}
